--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<img src="botek.jpeg" alt="Descripción de la imagen" class="imagen-de-perfil">
+		<img src="botek.jpg" alt="Descripción de la imagen" class="imagen-de-perfil">
 		<h1>Kevin Eduardo Gonzalez Garcia</h1>
 		<P>"Desarrollo de software innovador"</P>
 		<p>21307019@utcgg.edu.mx</p>
